[package]
authors = ["吴胜 <pickjob@126.com>"]
edition = "2018"
name = "rust-starter"
version = "0.1.0"

[dependencies]
# Result包装
anyhow = "*"
# 异步支持
futures = "*"
# 字节流处理
bytes = "*"
# 编码
hex = "*"
base64 = "*"
urlencoding = "*"
# 正则
regex = "*"
# 序列化、反序列化
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
serde_qs = "*"
serde-transcode = "*"
# 时间
chrono = { version = "*", features = ["serde"] }
# 日志
log = { version = "*", features = ["max_level_trace", "release_max_level_info"] }
flexi_logger = { version = "*", features = ["async", "specfile", "compress"] }
# 随机数
rand = "*"
# 压缩
flate2 = "*"
# Http客户端
ureq = {version = "2.0.1", features = ["charset", "json"]}
# sqlite
rusqlite = "*"
# async-std
async-std = {version = "*", features = ["attributes"]}
# 异步函数递归调用
async-recursion = "*"

[[example]]
name = "template"
path = "examples/template.rs"

[[example]]
name = "template_async"
path = "examples/template_async.rs"

[[example]]
name = "fmt"
path = "examples/std/fmt.rs"

[[example]]
name = "io"
path = "examples/std/io.rs"

[[example]]
name = "fn"
path = "examples/std/fn.rs"

[[example]]
name = "arc"
path = "examples/std/concurrent/arc.rs"

[[example]]
name = "barrier"
path = "examples/std/concurrent/barrier.rs"

[[example]]
name = "mpsc"
path = "examples/std/concurrent/mpsc.rs"

[[example]]
name = "mutex"
path = "examples/std/concurrent/mutex.rs"

[[example]]
name = "rwlock"
path = "examples/std/concurrent/rwlock.rs"

[[example]]
name = "generic-class"
path = "examples/quirks/trait-object/generic-class.rs"

[[example]]
name = "anyhow"
path = "examples/frame/anyhow.rs"

[[example]]
name = "base64"
path = "examples/frame/base64.rs"

[[example]]
name = "urlencoding"
path = "examples/frame/urlencoding.rs"

[[example]]
name = "hex"
path = "examples/frame/hex.rs"

[[example]]
name = "log"
path = "examples/frame/log.rs"

[[example]]
name = "log2"
path = "examples/frame/log2.rs"

[[example]]
name = "rand"
path = "examples/frame/rand.rs"

[[example]]
name = "serde"
path = "examples/frame/serde.rs"

[[example]]
name = "threadpool"
path = "examples/frame/threadpool.rs"

[[example]]
name = "ureq"
path = "examples/frame/ureq.rs"

[[example]]
name = "sqlite"
path = "examples/frame/sqlite.rs"

[[example]]
name = "async_std"
path = "examples/frame/async_std.rs"

[[example]]
name = "runtime_reflection_system"
path = "examples/quirks/runtime_reflection_system.rs"
