[package]
authors = ["吴胜 <pickjob@126.com>"]
edition = "2018"
name = "rust-starter"
version = "0.1.0"

[dependencies]
# 异常处理
anyhow = "*"
# 日志
log = { version = "*", features = ["max_level_trace", "release_max_level_info"] }
flexi_logger = { version = "*", features = ["async", "specfile", "compress"] }
# 时间
chrono = { version = "*", features = ["serde"] }
# 编码
hex = "*"
base64 = "*"
urlencoding = "*"
# 序列化、反序列化
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
serde_qs = "*"
serde-transcode = "*"
# 随机数
rand = "*"
# 字节流处理
bytes = "*"
# 压缩
flate2 = "*"
# 正则
regex = "*"
# Http客户端
ureq = {version = "*", features = ["charset", "json"]}
# sqlite
rusqlite = "*"
# 并发
rayon = "*"
crossbeam = "*"
# 异步支持
futures = "*"
# async-std
async-std = {version = "*", features = ["attributes"]}
# 异步函数递归调用
async-recursion = "*"

[[example]]
name = "fmt"
path = "examples/std/fmt.rs"

[[example]]
name = "io"
path = "examples/std/io.rs"

[[example]]
name = "fn"
path = "examples/std/fn.rs"

[[example]]
name = "arc"
path = "examples/std/concurrent/arc.rs"

[[example]]
name = "barrier"
path = "examples/std/concurrent/barrier.rs"

[[example]]
name = "mpsc"
path = "examples/std/concurrent/mpsc.rs"

[[example]]
name = "mutex"
path = "examples/std/concurrent/mutex.rs"

[[example]]
name = "rwlock"
path = "examples/std/concurrent/rwlock.rs"

[[example]]
name = "generic-class"
path = "examples/features/generic-class.rs"

[[example]]
name = "anyhow"
path = "examples/frame/error/anyhow.rs"

[[example]]
name = "log"
path = "examples/frame/log/log.rs"

[[example]]
name = "chrono"
path = "examples/frame/time/chrono.rs"

[[example]]
name = "hex"
path = "examples/frame/codec/hex.rs"

[[example]]
name = "base64"
path = "examples/frame/codec/base64.rs"

[[example]]
name = "urlencoding"
path = "examples/frame/codec/urlencoding.rs"

[[example]]
name = "serde"
path = "examples/frame/serialize/serde.rs"

[[example]]
name = "ureq"
path = "examples/frame/http/ureq.rs"

[[example]]
name = "rand"
path = "examples/frame/utils/rand.rs"

[[example]]
name = "flate2"
path = "examples/frame/utils/flate2.rs"

[[example]]
name = "regex"
path = "examples/frame/utils/regex.rs"

[[example]]
name = "sqlite"
path = "examples/frame/database/sqlite.rs"

[[example]]
name = "rayon"
path = "examples/frame/concurrent/rayon.rs"

[[example]]
name = "async_std"
path = "examples/frame/async/async-std.rs"
